  base games
- add --show-download ; only show download like for games choosen in menu or
  given using --game parameter
- added --list-games-nsmb, --list-games-mkwiimmfi, --list-games-tokyo,
  --list-games-kirby, --list-games-pokemon, --list-games-3ds, --list-games-other
  to show only mods for specific base games

::misc. changes
- new download link for The Legend of Yoshi

::mod additions:
- Mario Kart Wii Fonts:
  - added Super Mario Font
  - added Chalky Font
  - added UmePlus Font
  - sort files alphabetically in list
- Mario Kart Wii Karts:
  - update Sonic the Hedgehog on Foot to version 1.5
  - add Black Mage on Wii Remote
  - add White Mage on Wii Remote
  - add Kirby on Wheelie
  - add Nabbit on Flame Runner
  - add Skull Kid on Bullet Bike
  - add Super Sonic on Mach Bike
  - add Wolf Link on Mach Bike

::game additions

:::New Super Mario Bros. Wii
- add support for Cliff Super Mario Bros. Wii (SCL[PUJ]01)
- add support for Challenging Super Mario Bros. Wii: Virtual Special (SMN[PUJ]ZC)

:::Pokemon
- add support for Pokemon Red Ruby
  - supply HANS configuration files for Red Ruby
- add support for Pokemon Delta Emerald (patch for Alpha Sapphire)
  - supply HANS configuration files for Delta Emerald
  - since the author of Delta Emerald is working on a patch for Omega Ruby
    aswell, the game and created files are called "DeltaEmerald-AS"
    [obviously they will be "DeltaEmerald-OR" for patched Omega Ruby]

v7.1.0:
::internal changes
- rewrite downloader function
- supply beat BPS patcher (32 and 64 bit)
- add (yet unused) patching functions for PPF patches
- add (yet unused) patching functions for BPS patches
- code cleanup, remove duplicated code

::bugfixes
- fixup The Legend of Zelda - Parallel Worlds patcher
- fixup --patch command line parameter

::misc. changes
- removed download link for Awesomer Super Luigi Mini (down)
- new download link for RVLution Wii
- new download link for Newer Falling Leaf