@@ -50,6 +50,7 @@ v7.2.0:
 
 ::misc. changes
 - new download link for The Legend of Yoshi
+- update to the latest The Legend of Yoshi
 
 ::mod additions:
 - Mario Kart Wii Fonts:
